# code-practice

./: .gitignore  README.md
PAT/1013/: CMakeLists.txt  main.cpp
acm-icpc-jhelper/: .gitignore  submission.template  task.template
acm-icpc-jhelper/output/: main.cpp
acm-icpc-jhelper/tasks/: Aizu0003.cpp  Aizu0004.cpp  Aizu0006.cpp  Aizu0007.cpp  Aizu0008.cpp  Aizu0009.cpp  Aizu0010.cpp  Aizu0011.cpp  Aizu0012.cpp  Aizu0013.cpp  Aizu0014.cpp  Aizu0015.cpp  Aizu0016.cpp  Aizu0017.cpp  Aizu0020.cpp  DOTCPP1003.cpp  DOTCPP1004.cpp  DOTCPP1009.cpp  DOTCPP1010.cpp  DOTCPP1012.cpp  DOTCPP1016.cpp  DOTCPP1018.cpp  DOTCPP1026.cpp  (+37 more)
atcoder/: abc116_a.py  abc116_b.py  abc116_c.py
binary-tree/: main.cpp
c-lang-practices/: CMakeLists.txt
c-lang-practices/aes/: CMakeLists.txt  aes.c  aes.h
c-lang-practices/bigint/: CMakeLists.txt  bigint.c  bigint.h  bigint_test.c  rand_util.c  rand_util.h  test-data-generator.py
c-lang-practices/crypto/: CMakeLists.txt  decrypt.c  encrypt.c  init.c  key_gen.c  test.c
c-lang-practices/crypto/include/: matrix.c  matrix.h  mceliece.c  mceliece.h  qc_mdpc.c  qc_mdpc.h  utility.c
c-lang-practices/ds/bigint/: bigint.c
c-lang-practices/ds/linked-stack/: linked-stack-with-tail.c  linked-stack.c  linked-stack.cpp
c-lang-practices/ds/list/: sequence-list.c
c-lang-practices/float-hack/: CMakeLists.txt  main.c
c-lang-practices/include/ismdeep/: argv.h  log.h  time.h  util.h
c-lang-practices/ldpc-0508044/: CMakeLists.txt  ldpc-0508044.c  test_generate_matrix.c
c-lang-practices/ldpc-0508044/include/: generate_matrix.c  generate_matrix.h  utils.h
c-lang-practices/libpcap-demo/: CMakeLists.txt  main.cpp
c-lang-practices/linux-c/: CMakeLists.txt  argc_argv_envp.c  fork_test.c  get_pid.c
c-lang-practices/memory-reader/: CMakeLists.txt  main.c
c-lang-practices/simple-while-print/: CMakeLists.txt  simple-while-print.c
c-lang-practices/sort-examples/: CMakeLists.txt  main.c
c-lang-practices/src/: argv_test.c  mem-address-location-test.c  mem-reader.c  mem-writer.c  memset-benchmark.c  pthread-demo.c  stl-set-demo.cpp  var-init-in-cpp.cpp
c-lang-practices/test/: dynamic-array.cpp  ismdeep_argv_test.c  ismdeep_log_test.c  ismdeep_time_test.c  ismdeep_util_test.c
c-lang-practices/thread-pool-demo/: CMakeLists.txt  main.cpp
c-lang-practices/udp-demo/: CMakeLists.txt  client.c  client2.c  server.c
c-lang-practices/victim-read-write-memory/: .gitignore  victim-read-write-memory.sln
c-lang-practices/victim-read-write-memory/victim-read-write-memory/: ReadMe.txt  stdafx.cpp  victim-read-write-memory.cpp  victim-read-write-memory.vcxproj  victim-read-write-memory.vcxproj.filters
chelper-projects/: .gitignore  CHelperReport.txt  chelper.properties
github-today-contributions/: github-today-contributions.py
hdu-cpp/: 1073.c  2634.cpp  6536.c  CMakeLists.txt
java-demos/: WordCount.java
justoj-c/: 1015.c  1189.c  1190.c  1192.c  1193.c  1218.c  1258.c  1262.c  1270.c  1271.c  1296.c  1297.c  1901.c  1902.cpp  2032.c  2138.c  2160.c  2335.c  2336.c  2399.c  2419.c  CMakeLists.txt
justoj-py3/: 1244.py  1260.py  1298.py  1299.py  1300.py  1301.py  1302.py  1303.py  1305.py  1306.py  1307.py  1513.py  1514.py  1651.py  1840.py  1842.py  1866.py  1870.py  1875.py  1900.py  1910.py  1911.py  1928.py  1929.py  1930.py  1935.py  1945.py  1949.py  1950.py  2022.py  2031.py  2034.py  2038.py  2120.py  2133.py  2134.py  2147.py  2148.py  2149.py  2150.py  (+9 more)
justoj-tester/: main.py
justoj1262-spj/: CMakeLists.txt  main.cpp  std.out  usr.out
lf_temp/: CMakeLists.txt  main.cpp
lisp-practice/: acp-hack001.lisp  comment.lisp  maze_generation.lisp  test.lisp
python-practice/: a.py  b-test.py  b.py  clean-zsh-history-redundant.py  codeforces-rating-monitor.py  dns-proxy-client.py  dnscrypt.py  dnserver.py  electric-bill-monitor.py  genbin.py  generate-01-str.py  github-today-contributions.py  hdu-monitor.py  https-proxy-demo.py  iacr-subscribe-tool.py  image-info-hiding.py  ismdeep_utils.py  mem-usage-animation.py  min-chain-length.py  min-distance.py  mongo-client-demo.py  mrblank-dump.py  network-info.py  re.txt  redis-client-auth-demo.py  redis-demo.py  site-home-crawler.py  spfa.py  user-defined-sort.py  windows-service-demo.py  word-count.py  xmu-monitor.py
python3-proxy-demo/: python3-proxy-demo.py
python3-pyplot-demo/: python3-pyplot-demo-2.py  python3-pyplot-demo-3.py  python3-pyplot-demo-4.py  python3-pyplot-demo.py
sqlite3-demo/: sqlite3-demo.py
sqrt-integer-sum/: sqrt-integer-sum.py
tplinkspeed/: tplinkspeed.py
yahoo_procon2019_qual/: a.py  b.py  c.py
(+439 files in other folders)
