cmake_minimum_required(VERSION 3.13)
project(argv_test)
project(ismdeep_log_test)
project(ismdeep_util_test)
project(ismdeep_time_test)
project(ismdeep_argv_test)
project(var-init-in-cpp)
project(pthread-demo)
project(dynamic-array)
project(memset-benchmark)
project(mem-address-location-test)
project(mem-reader)
project(mem-writer)
project(stl-set-demo)
project(linked-stack)
project(linked-stack-with-tail)
project(sequence-list)
project(bigint)

set(EXECUTABLE_OUTPUT_PATH "bin")
set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 11)

include_directories("include")

add_executable(argv_test src/argv_test.c)
add_executable(ismdeep_log_test test/ismdeep_log_test.c)
add_executable(ismdeep_util_test test/ismdeep_util_test.c)
add_executable(ismdeep_time_test test/ismdeep_time_test.c)
add_executable(ismdeep_argv_test test/ismdeep_argv_test.c)
add_executable(pthread-demo src/pthread-demo.c)
add_executable(dynamic-array test/dynamic-array.cpp)
add_executable(memset-benchmark src/memset-benchmark.c)
add_executable(mem-address-location-test src/mem-address-location-test.c)
add_executable(mem-reader src/mem-reader.c)
add_executable(mem-writer src/mem-writer.c)
add_executable(stl-set-demo src/stl-set-demo.cpp)
add_executable(linked-stack ds/linked-stack/linked-stack.c)
add_executable(linked-stack-with-tail ds/linked-stack/linked-stack-with-tail.c)
add_executable(sequence-list ds/list/sequence-list.c)
add_executable(bigint ds/bigint/bigint.c)