cmake_minimum_required(VERSION 3.13)
project(1192)
project(1189)
project(1190)
project(1193)
project(1258)
project(1262)
project(1270)
project(1271)
project(justoj-c)

set(CMAKE_C_STANDARD 99)

add_executable(1192 1192.c)
add_executable(1189 1189.c)
add_executable(1190 1190.c)
add_executable(1193 1193.c)
add_executable(1258 1258.c)
add_executable(1262 1262.c)
add_executable(1270 1270.c)
add_executable(1271 1271.c)
add_executable(justoj-c 1271.c)
