cmake_minimum_required(VERSION 3.13)
project(1015)
project(1192)
project(1189)
project(1190)
project(1193)
project(1218)
project(1258)
project(1262)
project(1270)
project(1271)
project(1296)
project(1297)
project(1901)
project(2032)
project(2138)
project(2160)
project(2335)
project(2336)
project(justoj-c)

set(CMAKE_C_STANDARD 99)

add_executable(1015 1015.c)
add_executable(1192 1192.c)
add_executable(1189 1189.c)
add_executable(1190 1190.c)
add_executable(1193 1193.c)
add_executable(1218 1218.c)
add_executable(1258 1258.c)
add_executable(1262 1262.c)
add_executable(1270 1270.c)
add_executable(1271 1271.c)
add_executable(1296 1296.c)
add_executable(1297 1297.c)
add_executable(1901 1901.c)
add_executable(2032 2032.c)
add_executable(2160 2160.c)
add_executable(2335 2335.c)
add_executable(2336 2336.c)
add_executable(2138 2138.c)
add_executable(justoj-c 1271.c)
